# GPU

./: README.md  README.md.txt  bporfy_lab_10_cnn.ipynb
CPU/: .gitignore  CMakeLists.txt  funcs.cpp  funcs.hpp  input_10x10.txt  input_glidergun.txt  input_mozog.txt  main.cpp  main_cpu_par.cpp
GPU/: .gitignore  CMakeLists.txt  ConwayGPU.cpp  funcs.cl
